--- a/Livrable.qmd
+++ b/Livrable.qmd
@@ -28,7 +28,7 @@ format:
 execute:
   echo: false
   warning: false    
-bibliography: [References.bib]
+bibliography: [assets/References.bib]
 csl: assets/journal-of-cleaner-production.csl   
 subparagraph: yes
 mainfont: Trebuchet MS
@@ -44,6 +44,11 @@ library(kableExtra)
 ```
 
 \color{darkgray}
+
+# Executive summary
+
+
+
 # Introduction
 
 This deliverable deals with the description and implementation test of the 3D printing of recycled plastic demonstrator. The ambition of this use case is to test the feasibility of the distributed recycling via additive manufacturing (DRAM) [@CruzSanchez2020] concept with the purpose to integrate in the Do-It-Together approach. There are two main goals: 
@@ -84,41 +89,57 @@ In the
 
 ## Presentation of the scale of the demostrator: Rives de Meurthe district (Nancy, France) 
 
-The demonstrator is placed at the City of Nancy - France. 
-Nancy is a city located in northeastern France, in the region of Lorraine. It is the capital of the Meurthe-et-Moselle department and has a population of approximately 105,000 inhabitants. 
+The demonstrator is placed at the City of Nancy - France,  in the region of Lorraine at the  northeastern France.
+Nancy is the capital of the Meurthe-et-Moselle department and has a population of approximately 105,000 inhabitants. 
+More precisely, our interest is the  the Rives de Meurthe district.
+It extends between the city center and the Meurthe River for about 7 km from north to south (extending into the municipalities of Jarville-la-Malgrange upstream and Maxéville downstream) and is between 250 and 1,000 m wide.
 
-It is the capital of the Meurthe-et-Moselle department, on the Meurthe River in Lorraine. 
-Nancy was the capital of the steel industry until its collapse. In 1977, it created France's third largest technology park, Nancy-Brabois, which is very accessible thanks to the highway network.  
+![Figures on the Rives the Meurthe Quartier](figures/Image-to-add.png) 
+
+Nancy was not born around a waterway and its commercial potential. Its port and river side has long been rather reduced, contrary to the great majority of cities. 
+However, the main interest of the Rives de Meurthe  district concerns that it has been a case study in the light of urban regeneration due to flood risk presented in this area [@chiffre2014, @edelblutte2006]. 
+Therefore, since end of 1980's, there have been a series of policies of the renewal of the  district  to go beyond a simple reconversion by broadly rethinking the role of the central and pericentral space.
 
 
-Located in the east of the city, the Rives de Meurthe district extends from the banks of the Meurthe in the east to the boulevard Lobau and the boulevard of the 26th infantry regiment in the west. 
-To the south, it is bounded by the rue de Tomblaine and to the north by the rue du Crosne.
-It is separated from the rest of the city of Nancy by the canal from the Marne to the Rhine. It thus gives the impression of being an independent city, adjacent to Nancy. 
+Among the multiples choices, one of the strategic actions taken by the government is the transformation of the old site of the slaughterhouses in the heart of the Rives de Meurthe district.
+In 1996, the slaughterhouse activity was transferred to the Épinal-Mirecourt ZAC, marking the end of the site's industrial life. 
+As soon as the activities ceased, a rehabilitation process began in parallel with the development project of the district. 
+The vast 6-hectare site was first carefully demolished to bring back the main buildings constructed at the beginning of the 20th century.
+
+In 2017, the decision to create a place dedicated to creation on the site of the former slaughterhouses was taken.
+This gives birth in 2019 to the creation of the OK3 association to develop and animate the cultural project of  *L'Octroi Nancy*
+towards the creation of a Cultural and Creative Incubator.^[See more details in https://www.octroi-nancy.fr/]
+
+Given the pandemic situation at the beggining on 2020, the end of works was only finished  in  2021. 
+
 
 ## Third place Octroi Nancy
 
-The third place Octroi Nancy is a part of the neighborhood of the Rives de Meurthe. 
-This project transforms the former slaughterhouses of the city of Nancy into *"cultural, creative and citizen"* third place with $4600~m^2$  of renovated buildings [@pallot2021].
-Four large buildings (@fig-ok) were adequated to provide a friendly and multidisciplinary meeting place between culture and innovation; open to experimentation and intended to operate as a creative laboratory for the city.
-This place is intended to be an open space allowing the connection of future occupants, such as artists and creatives, with the inhabitants of the city and companies. 
+The third place Octroi Nancy is a urban project transforms the former slaughterhouses of the city of Nancy into *"cultural, creative and citizen"* third place with 4600 $m^2$  of renovated buildings [@pallot2021].
+
+![Overview of the Octroi Site](figures/ok3/OK3-00.jpg){#fig-ok3 width=90% }
 
 
+Four large buildings (@fig-ok3) were refurbished to provide a convivial and multidisciplinary meeting place between culture and innovation; open to experimentation and intended to operate as a creative laboratory for the city.
+The first building (1) are called the 'La Petite Halle' (*The Small Hall*) which is an space of 900 $m^2$. 
+THe purpose is a creative laboratory from which projects of all artistic and creative disciplines can emerge.
+The second building (2) is the 'L’Octroi Sud' (*South Octroi*) where it is intended the professionalization for the actors of the territory, through the installation of resource organizations.
+The third building (3) is the 'La Grande Halle' (*The big Hall*).
+It is a hangar building of 2,200 $m^2$ space for the organization of events, exhibitions and demonstration of artistic and cultural projects.
+Finnaly, the fourth bilding (4) is the 'La Halle ouverte' (*the Open Hall*) which is an open scace of 700 $m^2$ to host in particular a weekly organic market and several intermitec cultural activities mostly in the summer holidays.
 
-::: {#fig-ok layout-ncol=2}
-![Description of the OK3 site](figures/ok3/OK3.png){#fig-oka width=45%} 
+![The Octroi Site](figures/ok3/OK3-01.jpg){#fig-ok1 width=90% }
 
-![Photo of OK3](figures/ok3/OK3.png){#fig-okb width=45%} 
 
-The OK3 Site 
-:::
- 
+In summary, this type of third places are open ecosystems that will bring together artists, researchers and creative people with the public, the city's inhabitants and businesses.
 
-At the 2023, this third place is an open ecosystem that will bring together artists, researchers and creative people with the public, the city's inhabitants and businesses. 
+This can be considerd as a socio-technical imaginary projects with new goals and development paths that depart from the existing that can give an an opportunity for socially inclusive and environmentally desirable urban transitions  in Europe [@Fratini2019] in terms of new roles of the local actors reagarding the city development.
 
  
 ## Lorraine Fab Living Lab\textregistered
 
-The **Lorraine Smart Cities Living Lab (LSCLL)** is a trans-disciplinary resource center of the Université de Lorraine, to support and link the different societal challenges of the Lorraine territory with the local resources.
+The **Lorraine Smart Cities Living Lab (LSCLL)** is a trans-disciplinary resource center of the Université de Lorraine.
+It aims to support and link the different societal challenges of the Lorraine territory with the local resources.
 It enables the integration of different users, implementing collaborative and agile approaches in the service of *Research, Development of Innovations, Training and a Citizen Culture*.
 It experiments in terms of projects, governance and support platform since 2008,  involving several laboratories and other public and private partners as detailed in the @fig-LSCLL. 
 Since 2010, this project is member of the European Network of Living Labs (ENoLL)^[$4^{th}$ wave of labelisation)], seeking to develop public-private-population Partnerships (PPPPs) to disseminate innovation and related practices.
@@ -133,7 +154,7 @@ The OK3 Site
 :::
 
 
-Since 2014, the LSCLL formalizes its strategic intention with the the Lorraine Fab Living Lab\textregistered    (LF2L\textregistered) research platform for prospective assessment of innovative usages [@Dupont2016].  
+Since 2014, the LSCLL formalizes its strategic intention with the the Lorraine Fab Living Lab\textregistered (LF2L\textregistered) research platform for prospective assessment of innovative usages [@Dupont2016].  
 The LF2L physical environment is constituted by a collaborative and a fabLab space.
 The collaborative space allows users to foster co-operation in engineering design with different stakeholders in order to new create concepts/designs. 
 On the other hand, FabLab space allows users to materialize the concepts/designs  in an easy and quick way in order to have an prospective evaluation [@Boujut2003; @Dupont2014; @Dupont2015b].
@@ -158,6 +179,7 @@ This approach is useful to accelerate the deployment of industrial and/or urban 
 <!-- Fabrication laboratories (“Fab Labs”) are a global network of local labs, enabling invention by providing access to tools for digital fabrication. In that sense, Fab labs are a particularly relevant form of the shared machine shop, specifying a minimal inventory of devices and machine tools necessary to implement the founding idea of “how to make (almost) everything” in any one lab [@Troxler2016; @Gershenfeld2005]. The first Fab Lab was installed in 2002 at the Massachusetts Institute of Technology (MIT); today there is a network of more than 2000 active workshops according to the fablab network (https://www.fablabs.io/labs/map) throughout the world.  In 2007, an international Fab Lab charter2 was adopted, establishing the essential principles of the Fab Lab form—e.g., public access to tools and knowledge.  -->
 
  
+
 
 # 3D Printing of recycled plastic demonstrator: the “Green FabLab”
 ## Rationale for the technological system of the 3D printing  recycling demonstrator 
@@ -797,7 +819,7 @@ Therefore, each example has a specific purpose.
 
 This first experimentation aimed to prove the design of a customized product.
 Based on the printability tests, the initial model was developed using the CAD software Onshape to validate the technical printability of PLA virgin assets. 
-Using the case of a personalization of a commericla furniture-arranging tool as displayed in @fig-demo1, several printed parts were manufactured to evaluate the technical pertinence of the reults as part a existing furniture.
+Using the case of a personalization of a commercial furniture-arranging tool as displayed in @fig-demo1, several printed parts were manufactured to evaluate the technical pertinence of the reults as part a existing furniture.
 
 ![Personlizing a existing furniture](figures/Demo-01.jpg){#fig-demo1 width=90%}
 
