--- a/Livrable.qmd
+++ b/Livrable.qmd
@@ -89,10 +89,10 @@ In the
 
 ## Presentation of the scale of the demostrator: Rives de Meurthe district (Nancy, France) 
 
-The demonstrator is placed at the City of Nancy - France,  in the region of Lorraine at the  northeastern France.
+The demonstrator is placed at the City of Nancy - France,  in the region of Lorraine at the  northeastern.
 Nancy is the capital of the Meurthe-et-Moselle department and has a population of approximately 105,000 inhabitants. 
 More precisely, our interest is the  Rives de Meurthe district as presented by the @fig-rives.
-It extends between the city center and the Meurthe River for about 7 km from north to south (extending into the municipalities of Jarville-la-Malgrange upstream and Maxéville downstream) and is between 250 and 1,000 m wide.
+This district extends between the city center and the Meurthe River for about 7 km from north to south (extending into the municipalities of Jarville-la-Malgrange upstream and Maxéville downstream) and is between 250 and 1,000 m wide.
 
 ::: {#fig-rives layout="[35,-5,65]"}
 ![](figures/ok3/Rives-of-meurthe.png) 
@@ -104,18 +104,19 @@ Localization of the Rives the Meurthe distric
 
 
 
-
-Nancy was not born around a waterway and its commercial potential. Its port and river side has long been rather reduced, contrary to the great majority of cities. 
+Nancy was not born around a waterway and its commercial potential. 
+Its port and river side has long been rather reduced, contrary to the great majority of cities. 
 However, the main interest of the Rives de Meurthe  district concerns that it has been a case study in the light of urban regeneration due to flood risk presented in this area [@chiffre2014; @edelblutte2006]. 
-Therefore, since end of 1980's, there have been a series of policies of the renewal of the  district  to go beyond a simple reconversion by broadly rethinking the role of the central and pericentral space.
+Therefore, since end of 1980's, there have been a series of  renewal policies of the  district  with the purpose of going beyond a simple reconversion by broadly rethinking the role of the central and pericentral space ofo the city.
 
 
-Among the multiples choices, one of the strategic actions taken by the government is the transformation of the old site of the slaughterhouses in the heart of the Rives de Meurthe district.
+Among the multiples choices, one of the strategic actions taken by the government have been the transformation of the old site of the slaughterhouses in the heart of the Rives de Meurthe district.
 In 1996, the slaughterhouse activity was transferred to the Épinal-Mirecourt ZAC, marking the end of the site's industrial life. 
 As soon as the activities ceased, a rehabilitation process began in parallel with the development project of the district. 
 The vast 6-hectare site was first carefully demolished to bring back the main buildings constructed at the beginning of the 20th century.
 
-In 2017, the decision to create a place dedicated to creation on the site of the former slaughterhouses was taken.
+In 2017, the city administration took the decision by a public concertation to create exemplary actions in terms of of ecological transition at the city level [@villedenancy2018].
+Thus, the creation on the site of the former slaughterhouses was taken.
 This gives birth in 2019 to the creation of the OK3 association to develop and animate the cultural project of  *L'Octroi Nancy*
 towards the creation of a Cultural and Creative Incubator.^[See more details in https://www.octroi-nancy.fr/]
 
@@ -135,13 +136,13 @@ THe purpose is a creative laboratory from which projects of all artistic and cre
 The second building (2) is the 'L’Octroi Sud' (*South Octroi*) where it is intended the professionalization for the actors of the territory, through the installation of resource organizations.
 The third building (3) is the 'La Grande Halle' (*The big Hall*).
 It is a hangar building of 2,200 $m^2$ space for the organization of events, exhibitions and demonstration of artistic and cultural projects.
-Finnaly, the fourth bilding (4) is the 'La Halle ouverte' (*the Open Hall*) which is an open scace of 700 $m^2$ to host in particular a weekly organic market and several intermitec cultural activities mostly in the summer holidays.
+Finally, the fourth bilding (4) is the 'La Halle ouverte' (*the Open Hall*) which is an open space of 700 $m^2$ to host in particular a weekly organic market and several intermitent cultural activities mostly in the summer holidays.
 
 ![The Octroi Site](figures/ok3/OK3-01.jpg){#fig-ok1 width=90% }
 
 
 In summary, these type of third places are open ecosystems that will bring together artists, researchers and creative people with the public, the city's inhabitants and businesses.
-This can be considerd as a socio-technical imaginary projects with new goals and development paths that depart from the existing that can give an an opportunity for socially inclusive and environmentally desirable urban transitions  in Europe [@Fratini2019] in terms of new roles of the local actors reagarding the city development.
+This can be considered as a socio-technical imaginary projects with new goals and development paths that depart from the existing that can give an an opportunity for socially inclusive and environmentally desirable urban transitions  in Europe [@Fratini2019] in terms of new roles of the local actors regarding the city development.
 
  
 ## Lorraine Fab Living Lab\textregistered
@@ -150,7 +151,7 @@ Connected to the Octroi ecosystem, the **Lorraine Smart Cities Living Lab (LSCLL
 It aims to support and link the different societal challenges of the Lorraine territory with the local resources.
 It enables the integration of different users, implementing collaborative and agile approaches in the service of *Research, Development of Innovations, Training and a Citizen Culture*.
 It experiments in terms of projects, governance and support platform since 2008,  involving several laboratories and other public and private partners as detailed in the @fig-lscll. 
-Since 2010, this initiative is member of the European Network of Living Labs (ENoLL)^[4$^{th}$ wave of labelisation)], seeking to develop public-private-population Partnerships (PPPPs) to disseminate innovation and related practices.
+Since 2010, this initiative is member of the European Network of Living Labs (ENoLL)^[4$^{th}$ wave of labelisation)], seeking to develop public-private-population partnerships (PPPPs) to disseminate innovation and related practices.
 
 ![Description of the Lo site](figures/lf2l/LSCLL.png){#fig-lscll width=65%} 
 
@@ -162,18 +163,15 @@ Since 2014, the LSCLL formalizes its strategic intention with the the Lorraine F
 
 
 
-The LF2L physical environment is constituted by a collaborative and a fabLab space.
+The LF2L physical environment is constituted by a collaborative and a fablab space.
 The collaborative space allows users to foster co-operation in engineering design with different stakeholders in order to new create concepts/designs. 
-On the other hand, FabLab space allows users to materialize the concepts/designs  in an easy and quick way in order to have an prospective evaluation [@Boujut2003; @Dupont2014; @Dupont2015b].
-The synergy of these two spaces enables the project development in a living lab approach taking into account the User Centered Design principles. 
-
-
+On the other hand, the fablab space allows users to materialize the concepts/designs  in an easy and quick way in order to have an prospective evaluation [@Boujut2003; @Dupont2014; @Dupont2015b].
+The synergy of these two spaces enables the project development in a living lab approach taking into account the user centered design principles. 
 
 The conceptual framework is composed of three main elements as illustrated in @fig-lf2l-methodology: 
 
 ::: {layout-ncol=2}
 ![The Lorraine Fab Living Lab methodlogy.](figures/lf2l/Methodology-01.jpg){#fig-lf2l-methodology}
-
 
 1. *Co-creation*: Creative process to find alternative resolution concepts to a problem-topic given integrating the key stakeholders in the process. 
 2. *Prototyping*: Materialization (virtual/real) of the concept in order to have a first and quick in- sight. 
@@ -193,13 +191,16 @@ This approach is useful to accelerate the deployment of industrial and/or urban 
 # 3D Printing of recycled plastic demonstrator: the “Green FabLab”
 ## Rationale for the technological system of the 3D printing  recycling demonstrator 
 
-Based on the context characteristics of the (LF2L\textregistered) and the Octroi local ecosystems, the 3D printed demonstrator, also called locally as the *"Green Fablab"* as illustrated in the @fig-gf-2021, it is an initial socio-technical demonstrator of the distributed recycling approach that combines a living lab approach inside a citizen third place ecosystem.  
+Based on the context local characteristics of the (LF2L\textregistered) and the Octroi ecosystems, the 3D printed demonstrator, also known locally as the *"Green Fablab"* is illustrated in the @fig-gf-2021. it is an initial socio-technical demonstrator of the distributed recycling approach that combines a living lab approach inside a citizen third place ecosystem.  
 
 ![Initial overview of the Green Fablab at November 2021](figures/2021-11-17-octroi.jpeg){#fig-gf-2021 width='90%'}
 
+Initially, this demonstrator was inside the LF2L building that was a consolidation of previous research works [@sanchez2016]. 
+Starting from November 2021 after the refurbishing works were finished, the Green Fablab was installed inside the Octroi ecosystem.
+
 The Green FabLab demonstrator aims to experiment the technical feasibility and  evaluation of a distributed and local plastic recycling.
 The main purpose is to valorize plastic waste for 3D printing technology and manual injection moulding techniques in the context of an open innovation space such as the Octroi Nancy. 
-The results of this experimentation can be a baseline for many archetypes of open communities such as fab labs, Hackerspaces or even industrial prototyping zones. 
+The results of this experimentation can be a baseline for many archetypes of open communities such as fablabs, hackerspaces or even industrial prototyping zones. 
 
 The main purpose of this demonstrator in the INEDIT project is **to prove that plastic waste material can have several uses, and therefore several values, during its life cycle**. The same material could be recycled and transformed into new raw material for different products. It is in this spirit that many associations, SMEs, local authorities and individuals are developing new local recycling practices that could allow us to aim for an economy that is more respectful of the environment, fairer for society and more engaging for local politicians.
 
@@ -208,13 +209,14 @@ Likewise, it is required the study of technical parameters for the technological
 The outputs are, not only by minimizing use of the environment as a sink for residuals but – perhaps more importantly – by minimizing the use of virgin materials. 
 Hence, the environmental impact of this technology is significantly reduced.
 
-Moreover, taking into account the exponential growth of these spaces (Fablab, Hakerspace, Makespace), they could help to increase the efficiency to the problem of polymer recycling through the development of a distributed recycling approach. 
-In these geographically distributed spaces, the polymer recycling process of the surrounding areas (streets, neighbourhood, industrial zones) will be carried out at small lot sizes minimizing, energy consumptions, and carbon emissions compared to the tradition centralized systems, as some researches have already explored this path.  
+Moreover, taking into account the exponential growth of these spaces (third places, fablabs, Haker/makerspaces), they could help to increase the efficiency to the problem of polymer recycling through the development of a distributed recycling approach.
+In these geographically distributed spaces, the polymer recycling process of the surrounding areas (streets, neighbourhood, industrial zones) will be carried out at small lot sizes minimizing, energy consumptions, and carbon emissions compared to the tradition centralized systems, as some researches have already explored this path.
 
 
 ## Distributed recycling via Additive Manufacturing DRAM
 
-The Additive manufacturing (AM) -also known as 3D printing- is an important industrial vector in the and its direct (and distributed) manufacturing capabilities is becoming a key industrial process that could play a relevant role in the transition from a linear to circular economy [@Despeisse2016]. 
+One major concept is the the Additive manufacturing (AM) -also known as 3D printing- technology which is an important industrial vector in the and its direct (and distributed) manufacturing capabilities.
+This set of technologies are becoming a key industrial process that could play a relevant role in the transition from a linear to circular economy [@Despeisse2016]. 
 AM technologies is expected to transform the production process [@Rahman2018; @Chen2017; @Jiang2017] thanks to its ability to transform a numerical model into a deposition of material (points, lines or areas) to create a 3D part [@Bourell2017]. 
 The expiration of the first patents has contributed to an increased interest, creating consumer value and potential for disruption [@Beltagui2020; @West2016a]. In economic terms, the global additive manufacturing market is expected to reach USD 23.33 billion by 2026 [@ReportsAndData2019]. 
 However, determining when and how to take advantage of the benefits is a challenge for traditional means of production. From a societal viewpoint, @Jiang2017 reported that the product development could change from traditional stage-gate models to iterative, agile processes changing the scenario by 2030. 
@@ -253,6 +255,8 @@ Significant efforts are being made by industry and the scientific community to m
 Nevertheless, @Niaki2019 demonstrated that environmental and social benefits are not the key preferential factors in the adoption of AM technologies in different industrial sectors. Only the economic factor remains relevant in the AM implementation, considering time- and cost-saving as the most important reasons. 
 
 ## Positionnement of Use case for OMDF Functions
+
+Ragarding the structuration of the INEDIT project, the 3D printer 
 
 Considering the Open Manufacturig Demonstrateion Facilities functions established in the Delivrable XX.X, the Green fablab proves the following functions:
 
